crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_custom_inner.stderr
error[E0277]: the trait bound `CustomString: VouchedStrInner` is not satisfied
  --> tests/ui/vouched/impls_try_from_borrowed_str_custom_inner.rs:17:10
   |
17 | #[derive(Vouched)]
   |          ^^^^^^^ the trait `VouchedStrInner` is not implemented for `CustomString`
   |
   = help: the following other types implement trait `VouchedStrInner`:
             Arc<str>
             Box<str>
             Rc<str>
             String
   = help: see issue #48214
   = note: this error originates in the derive macro `Vouched` (in Nightly builds, run with -Z macro-backtrace for more info)
